modules/ec2/main.tf
data "aws_ami" "ubuntu" {
  most_recent = true
  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
}

resource "aws_security_group" "web_sg" {
vpc_id = var.vpc_id

ingress {
 from_port = 80
 to_port = 80
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
}

ingress{
 from_port = 22
 to_port = 22
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
}

egress{
 from_port = 0
 to_port = 0
 protocol = "-1"
 cidr_blocks = ["0.0.0.0/0"]
}
}

resource "aws_instance" "web" {
 ami = data.aws_ami.ubuntu.id
 instance_type = var.instance_type
 subnet_id = var.subnet_id
 vpc_security_group_ids = [aws_security_group.web_sg.id]
 key_name = "awsEC2keypair"
 user_data = <<EOF
#!/bin/bash
apt update
apt install nginx -y
systemctl start nginx
EOF
}
